--- a/build.xml
+++ b/build.xml
@@ -26,9 +26,9 @@
 		</fileset>
 	</path>
 
-	<target name="dist" depends="clean,init">
+	<target name="dist" depends="clean,init" description="Build the distibutable">
 		<javac srcdir="${src.dir}" destdir="${build.dir}" debug="on" classpathref="lib-path" includeantruntime="false" />
-		
+
 		<unjar src="lib/templar.jar" dest="${build.dir}" />
 		<unjar src="lib/routemaster.jar" dest="${build.dir}" />
 		<jar destfile="${dist.dir}/${ant.project.name}.jar" manifest="src/main/META-INF/manifest.mf">
